--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "flexy-flipcards": "^0.1.2",
     "font-awesome": "^4.7.0",
     "lodash.shuffle": "^4.2.0",
     "react": "^16.5.2",
@@ -14,5 +15,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "react-flipcard-2": "^0.3.2"
   }
 }
