--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "create": "0.0.2",
     "flexy-flipcards": "^0.1.2",
     "font-awesome": "^4.7.0",
     "lodash.shuffle": "^4.2.0",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-flipcard": "^0.2.1",
     "react-scripts": "1.1.5"
   },
   "scripts": {
@@ -16,7 +18,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {
-    "react-flipcard-2": "^0.3.2"
-  }
+  "devDependencies": {}
 }
